Fixat "select all" beteende i dropdown samt dimmerns z-index

--- a/Content/partials/_settings.sizes.scss
+++ b/Content/partials/_settings.sizes.scss
@@ -44,6 +44,7 @@ $layer-two: 10;
 $layer-three: 20;
 $layer-four: 30;
 $layer-five: 40;
+$layer-above-scrollbar: 100;
 
 /*------------------------------------*\
   #SMALL
